--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,6 +26,9 @@
     name: "{{ packer_provision_packages }}"
     state: present
 
+- include_tasks: vagrant.yml
+  when: packer_provision_vagrant | bool
+
 - name: Check if VirtualBox is running the guest VM.
   stat:
     path: "/home/{{ ansible_ssh_user }}/.vbox_version"
