--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,10 +26,15 @@
     name: "{{ packer_provision_packages }}"
     state: present
 
-- include_tasks: vagrant.yml
+- name: "Include tasks for vagrant user"
+  include_tasks: vagrant.yml
   when: ansible_ssh_user == "vagrant"
 
-- include_tasks: virtualbox.yml
+- name: "Include tasks for removing swap files"
+  include_tasks: swap.yml
+
+- name: "Include tasks for VirtualBox guest utilites if inside Virtualbox VM"
+  include_tasks: virtualbox.yml
   when: packer_builder_type == "virtualbox-iso"
 
 - name: "Configure SSH daemon"
