--- a/vars/Ubuntu-16.yml
+++ b/vars/Ubuntu-16.yml
@@ -37,11 +37,20 @@ packer_provision_packages_clean:
   - libreoffice-style-elementary
   - libreoffice-style-tango
   - libreoffice-writer
+  - libx11-6
+  - libx11-data
+  - libxcb1
+  - libxext6
+  - libxmuu1
+  - linux-source
   - parole
   - pidgin
   - pidgin-data
   - pidgin-libnotify
   - pidgin-otr
+  - ppp
+  - pppconfig
+  - pppoeconf
   - remmina
   - rhythmbox
   - sgt-launcher
@@ -62,4 +71,5 @@ packer_provision_packages_clean:
   - vino
   - webbrowser-app
   - whoopsie
+  - xauth
   - xfburn
