--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,17 +4,17 @@
 
 galaxy_info:
   role_name: ansible-role-packer-provision
-  author: Jonas Mauer
+  author: jam82
   description: Ansible role for setting up packer-provision.
   company: ''
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
-  # issue_tracker_url: http://example.com/issue/tracker
+  issue_tracker_url: https://github.com/jam82/ansible-role-packer-provision/issues
 
   license: MIT
 
-  min_ansible_version: 2.7
+  min_ansible_version: 2.8
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
@@ -24,15 +24,40 @@ galaxy_info:
   # platforms is a list of platforms, and each platform has a name and a list of versions.
   #
   platforms:
-    - name: Ubuntu
+    - name: Alpine
       versions:
-        - 16
-        - 18
+        - 3.10
+        - 3.11
+    - name: Amazon
+      versions:
+        - 2
+    - name: Archlinux
     - name: CentOS
       versions:
         - 7
         - 8
+    - name: Debian
+      versions:
+        - 9
+        - 10
+    - name: Fedora
+      versions:
+        - 31
+    - name: Oracle
+      versions:
+        - 7
+        - 8
+    - name: OpenSuse Leap
+      versions:
+        - 15
+    - name: Ubuntu
+      versions:
+        - 18.04
+        - 20.04
 
   galaxy_tags: []
 
-  dependencies: []
+  dependencies:
+    - src: https://github.com/jam82/ansible-role-common.git
+      name: common
+      version: master
