--- a/molecule/resources/playbooks/converge.yml
+++ b/molecule/resources/playbooks/converge.yml
@@ -4,10 +4,10 @@
 
 - name: Converge
   hosts: all
-  become: True
+  become: true
   pre_tasks:
     - name: "Include variables to converge playbook"
-      include_vars: vars.yml
+      ansible.builtin.include_vars: vars.yml
   roles:
     # if you want to enable requirements put them in requirements.yml
     # and add here
