--- a/molecule/virtualbox/molecule.yml
+++ b/molecule/virtualbox/molecule.yml
@@ -1,6 +1,6 @@
 ---
 # role: ansible-role-pp
-# file: molecule/vbox/molecule.yml
+# file: molecule/virtualbox/molecule.yml
 
 dependency:
   name: galaxy
@@ -10,15 +10,13 @@ driver:
   name: vagrant
   provider:
     name: virtualbox
-    type: virtualbox
 lint: |
   set -e
   yamllint .
   ansible-lint
-  flake8
 platforms:
-  - name: pp-alpine310
-    box: "generic/alpine310"
+  - name: pp-alpine312
+    box: "generic/alpine312"
     cpus: 2
     memory: 1024
   - name: pp-arch
@@ -29,16 +27,12 @@ platforms:
     box: "centos/8"
     cpus: 2
     memory: 1024
-  - name: pp-debian10
-    box: "debian/buster64"
+  - name: pp-debian11
+    box: "debian/bullseye64"
     cpus: 2
     memory: 1024
-  - name: pp-fedora31
-    box: "fedora/31-cloud-base"
-    cpus: 2
-    memory: 1024
-  - name: pp-ubuntu1804
-    box: "ubuntu/bionic64"
+  - name: pp-fedora33
+    box: "fedora/33-cloud-base"
     cpus: 2
     memory: 1024
   - name: pp-ubuntu2004
@@ -47,7 +41,7 @@ platforms:
     memory: 1024
 provisioner:
   name: ansible
-  log: True
+  log: true
   playbooks:
     prepare: ../resources/playbooks/prepare.yml
     converge: ../resources/playbooks/converge.yml
@@ -56,10 +50,4 @@ provisioner:
       all:
         packer_builder_type: "virtualbox-iso"
 verifier:
-  name: testinfra
-  env:
-    PYTHONWARNINGS: "ignore"
-  directory: ../resources/tests
-  options:
-    v: True
-    sudo: True
+  name: ansible
