--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -3,7 +3,7 @@
 # file: tasks/vagrant.yml
 
 - name: "Add {{ ansible_ssh_user }} sudoers.d file"
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: "/etc/sudoers.d/{{ ansible_ssh_user }}"
     regexp: '^{{ ansible_ssh_user }}'
     line: "{{ ansible_ssh_user }}  ALL=(ALL)   NOPASSWD:ALL"
@@ -15,7 +15,7 @@
     validate: /usr/sbin/visudo -cf %s
 
 - name: "Create {{ ansible_ssh_user }} .ssh directory"
-  file:
+  ansible.builtin.file:
     path: "/home/{{ ansible_ssh_user }}/.ssh"
     state: directory
     owner: "{{ ansible_ssh_user }}"
@@ -23,7 +23,7 @@
     mode: 0700
 
 - name: "Add vagrant public key"
-  authorized_key:
+  ansible.posix.authorized_key:
     user: "{{ ansible_ssh_user }}"
     key: https://github.com/mitchellh/vagrant/raw/master/keys/vagrant.pub
     state: present
@@ -31,7 +31,7 @@
   when: ansible_ssh_user == "vagrant"
 
 - name: "Add {{ ansible_ssh_user }} public key"
-  authorized_key:
+  ansible.posix.authorized_key:
     user: "{{ ansible_ssh_user }}"
     key: "{{ lookup('file', '~/.ssh/id_ed25519.pub') }}"
     state: present
