--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,18 +3,20 @@
 # file: tasks/main.yml
 
 - name: "Set os_family dependent variables"
-  ansible.builtin.include_vars: '{{ ansible_os_family }}.yml'
+  include_vars: '{{ ansible_os_family }}.yml'
 
 - name: "Set distribution dependent variables"
-  ansible.builtin.include_vars: '{{ vars_file }}'
-  with_first_found:
-    - files:
+  include_vars: "{{ item }}"
+  vars:
+    params:
+      files:
         - '{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml'
         - '{{ ansible_distribution }}.yml'
         - '{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml'
+      paths:
+        - 'vars'
       skip: true
-  loop_control:
-    loop_var: vars_file
+  loop: "{{ query('first_found', params, errors='ignore') }}"
 
 - name: "Run provision commands"
   ansible.builtin.shell: "{{ item }}"
