--- a/tasks/swap.yml
+++ b/tasks/swap.yml
@@ -23,7 +23,7 @@
   ansible.posix.sysctl:
     name: vm.swappiness
     value: '0'
-    reload: yes
+    reload: true
     state: present
-    sysctl_set: yes
+    sysctl_set: true
     sysctl_file: "/etc/sysctl.d/99-swappiness.conf"
