chore: update Ansible project configuration and structure
- Remove the skip list for linter rules in `.ansible-lint`
- Add `.pre-commit-config.yaml` with hooks for `ansible-lint`, `commitizen`, and pre-commit hooks
- Change the author and license info in `README.md`
- Modify metadata in `meta/main.yml` by changing `role_name` and `min_ansible_version`
- Add `pyproject.toml` with project information and tool configurations
- Delete `tasks.yml` playbook
- Update tasks in `tasks/main.yml` and `tasks/user.yml` with `ansible.builtin.include_vars`, `mode`, and other changes

Signed-off-by: Jonas Mauer <jam@kabelmail.net>

--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -2,25 +2,25 @@
 # role: ansible-role-packer-provision
 # file: tasks/vagrant.yml
 
-- name: "Add {{ ansible_ssh_user }} sudoers.d file"
+- name: "Add ansible_ssh_user sudoers.d file"
   ansible.builtin.lineinfile:
     path: "/etc/sudoers.d/{{ ansible_ssh_user }}"
     regexp: '^{{ ansible_ssh_user }}'
     line: "{{ ansible_ssh_user }}  ALL=(ALL)   NOPASSWD:ALL"
     owner: root
     group: root
-    mode: 0440
+    mode: "0440"
     create: true
     state: present
     validate: /usr/sbin/visudo -cf %s
 
-- name: "Create {{ ansible_ssh_user }} .ssh directory"
+- name: "Create ansible_user/.ssh directory"
   ansible.builtin.file:
     path: "/home/{{ ansible_ssh_user }}/.ssh"
     state: directory
     owner: "{{ ansible_ssh_user }}"
     group: "{{ ansible_ssh_user }}"
-    mode: 0700
+    mode: "0700"
 
 - name: "Add ssh public key(s)"
   ansible.posix.authorized_key:
