--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,63 +1,14 @@
 ---
-# role: ansible-role-packer-provision
+# repo: ansible-role-packer-provision
 # file: meta/main.yml
 
 galaxy_info:
-  role_name: packer-provision
-  author: jam82
+  role_name: packer_provision
+  author: jomrr
   description: Ansible role for setting up packer-provision.
   company: ''
-
-  # If the issue tracker for your role is not on github, uncomment the
-  # next line and provide a value
-  issue_tracker_url: https://github.com/jam82/ansible-role-packer-provision/issues
-
+  issue_tracker_url: https://github.com/jomrr/ansible-role-packer-provision/issues
   license: MIT
-
-  min_ansible_version: 2.8
-
-  # If this a Container Enabled role, provide the minimum Ansible Container version.
-  # min_ansible_container_version:
-
-  github_branch: master
-
-  # platforms is a list of platforms, and each platform has a name and a list of versions.
-  #
-  platforms:
-    - name: Alpine
-      versions:
-        - 3.10
-        - 3.11
-    - name: Amazon
-      versions:
-        - 2
-    - name: Archlinux
-    - name: CentOS
-      versions:
-        - 7
-        - 8
-    - name: Debian
-      versions:
-        - 9
-        - 10
-    - name: Fedora
-      versions:
-        - 31
-    - name: Oracle
-      versions:
-        - 7
-        - 8
-    - name: OpenSuse Leap
-      versions:
-        - 15
-    - name: Ubuntu
-      versions:
-        - 18.04
-        - 20.04
-
+  min_ansible_version: '2.15'
+  github_branch: main
   galaxy_tags: []
-
-  dependencies:
-    - src: https://github.com/jam82/ansible-role-common.git
-      name: common
-      version: master
