--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,10 +3,10 @@
 # file: tasks/main.yml
 
 - name: "Set os_family dependent variables"
-  include_vars: '{{ ansible_os_family }}.yml'
+  ansible.builtin.include_vars: '{{ ansible_os_family }}.yml'
 
 - name: "Set distribution dependent variables"
-  include_vars: "{{ item }}"
+  ansible.builtin.include_vars: "{{ item }}"
   vars:
     params:
       files:
@@ -29,7 +29,7 @@
     name: "{{ packer_provision_packages }}"
     state: present
 
-- name: "Include tasks for {{ ansible_ssh_user }} user"
+- name: "Include tasks for ansible_ssh_user"
   ansible.builtin.include_tasks: user.yml
 
 - name: "Include tasks for removing swap files"
@@ -67,3 +67,4 @@
   ansible.builtin.file:
     path: /etc/machine-id
     state: touch
+    mode: '0644'
