refactor: refactor packer provisioning and configuration tasks
- Comment out `packer_builder_type` and add default value for `packer_provision_ssh_keys`
- Replace `packer_provision_ssh_keys` with `packer_provision_ssh_key_urls`
- Update role metadata: rename repo to `jomrr.packer_provision`, update `min_ansible_version` to `2.17`
- Add new task file `apt.yml` with tasks for installing and cleaning packages
- Add new task file `clean.yml` with tasks for clearing and linking machine-id, and removing udev rules
- Enhance task descriptions and change some variable references to lowercase in `tasks/main.yml`
- Delegate specific package manager tasks to individual files based on package manager (e.g., `apt.yml`)
- Modify task to add SSH keys to use `packer_provision_ssh_key_urls` instead of `packer_provision_ssh_keys` in `user.yml`
- Adjust swap-related configuration tasks to dynamically handle multiple swap files and reduce swappiness
- Delete redundant `vars/` files for specific distributions and replace them with lowercase named files
- Introduce new, cleaned up `vars/` files for common distributions (Debian, RedHat, etc.)

Signed-off-by: jam82 <jam@kabelmail.net>

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,5 @@
 ---
-# repo: ansible-role-packer-provision
+# role: jomrr.packer_provision
 # file: meta/main.yml
 
 galaxy_info:
@@ -9,6 +9,6 @@ galaxy_info:
   company: ''
   issue_tracker_url: https://github.com/jomrr/ansible-role-packer-provision/issues
   license: MIT
-  min_ansible_version: '2.15'
+  min_ansible_version: '2.17'
   github_branch: main
   galaxy_tags: []
