--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,9 +4,11 @@
 
 # variable normally supplied by packer provisioner ansible
 # see https://www.packer.io/docs/provisioners/ansible.html#default-extra-variables
-packer_builder_type: virtualbox-iso
+# packer_builder_type: qemu
+
+packer_provision_ssh_keys: false
 
 # the ssh public key to deploy, defaults to standard vagrant pubkey.
-packer_provision_ssh_keys:
+packer_provision_ssh_key_urls:
   - https://github.com/mitchellh/vagrant/raw/master/keys/vagrant.pub
 #  - "{{ lookup('file', '~/.ssh/id_ed25519.pub') }}"
