--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -2,7 +2,7 @@
 # role: ansible-role-packer-provision
 # file: tasks/vagrant.yml
 
-- name: "Add ansible_ssh_user sudoers.d file"
+- name: "Role packer_provision | Add ansible_ssh_user sudoers.d file"
   ansible.builtin.lineinfile:
     path: "/etc/sudoers.d/{{ ansible_ssh_user }}"
     regexp: '^{{ ansible_ssh_user }}'
@@ -14,7 +14,7 @@
     state: present
     validate: /usr/sbin/visudo -cf %s
 
-- name: "Create ansible_user/.ssh directory"
+- name: "Role packer_provision | Create ansible_user/.ssh directory"
   ansible.builtin.file:
     path: "/home/{{ ansible_ssh_user }}/.ssh"
     state: directory
@@ -22,10 +22,11 @@
     group: "{{ ansible_ssh_user }}"
     mode: "0700"
 
-- name: "Add ssh public key(s)"
+- name: "Role packer_provision | Add ssh public key(s)"
   ansible.posix.authorized_key:
     user: "{{ ansible_ssh_user }}"
-    key: "{{ packer_provision_ssh_key }}"
+    key: "{{ item }}"
     state: present
     exclusive: false
-  loop: "{{ packer_provision_ssh_keys }}"
+  loop: "{{ packer_provision_ssh_key_urls }}"
+  when: packer_provision_ssh_keys | bool
