feat: add builder-specific guest extensions task
- Add task to install builder-specific guest extensions
- Introduce variables file with mapping for packer provisioning guest extensions

Signed-off-by: jam82 <jam@kabelmail.net>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,6 +18,11 @@
       skip: true
   loop: "{{ query('first_found', params, errors='ignore') }}"
 
+- name: "Role packer_provision | Install builder-specific guest extensions"
+  ansible.builtin.package:
+    name: "{{ packer_provision_guest_extensions[packer_builder_type] }}"
+    state: present
+
 - name: "Role packer_provision | Run provision commands"
   ansible.builtin.shell: "{{ item }}"
   loop: "{{ packer_provision_commands | default([], true) }}"
