chore: improve access permissions configuration
- Change sudoers file line to allow all commands, instead of NOPASSWD:ALL

Signed-off-by: jam82 <jam@kabelmail.net>

--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -6,7 +6,7 @@
   ansible.builtin.lineinfile:
     path: "/etc/sudoers.d/{{ ansible_ssh_user }}"
     regexp: '^{{ ansible_ssh_user }}'
-    line: "{{ ansible_ssh_user }}  ALL=(ALL)   NOPASSWD:ALL"
+    line: "{{ ansible_ssh_user }}  ALL=(ALL:ALL) ALL"
     owner: root
     group: root
     mode: "0440"
