chore: ensure robust CI with comprehensive package updates
- Add `upgrade: dist` to apt package installation configuration for distribution upgrades

Signed-off-by: jam82 <jam@kabelmail.net>

--- a/tasks/apt.yml
+++ b/tasks/apt.yml
@@ -7,6 +7,7 @@
     name: "{{ packer_provision_packages | default([], true) }}"
     install_recommends: false
     update_cache: true
+    upgrade: dist
     state: present
   loop:
     - "{{ packer_provision_packages }}"
