chore: improve package management and testing setup
- Add a command to remove development packages in `packer_provision_commands_clean` in debian.yml

Signed-off-by: jam82 <jam@kabelmail.net>

--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -4,12 +4,12 @@
 
 packer_provision_commands: []
 
-packer_provision_commands_clean: []
+packer_provision_commands_clean:
+  - "{{ ansible_pkg_mgr }}-get -y remove '.*-dev$'"
 
 packer_provision_packages: []
 
 packer_provision_packages_clean:
-  - '.*-dev$'
   - apport
   - mdadm
   - open-iscsi
