refactor: refactor provisioning commands and clean-up process
- Replace specific clean-up command with an empty list for `packer_provision_commands_clean`

Signed-off-by: jam82 <jam@kabelmail.net>

--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -4,8 +4,7 @@
 
 packer_provision_commands: []
 
-packer_provision_commands_clean:
-  - "{{ ansible_pkg_mgr }}-get -y remove '.*-dev$'"
+packer_provision_commands_clean: []
 
 packer_provision_packages: []
 
