chore: clean up installer logs and paths in Debian tasks
- Add a task to remove installer logs in the `clean` task file
- Define a variable for installer log paths in the Debian variables file

Signed-off-by: jam82 <jam@kabelmail.net>

--- a/tasks/clean.yml
+++ b/tasks/clean.yml
@@ -26,3 +26,9 @@
   ansible.builtin.file:
     path: /etc/udev/rules.d/70-persistent-net.rules
     state: absent
+
+- name: "Role packer_provision | Remove installer logs"
+  ansible.builtin.file:
+    path: "{{ item }}"
+    state: absent
+  loop: "{{ packer_provision_install_logs }}"
