style: standardize YAML file naming conventions
- Rename file from `Alpine.yml` to `alpine.yml` for consistency
- Rename file from `Archlinux.yml` to `archlinux.yml` for consistency
- Rename file from `Debian.yml` to `debian.yml` for consistency
- Rename file from `RedHat.yml` to `redhat.yml` for consistency
- Rename file from `Suse.yml` to `suse.yml` for consistency
- Add a new file `ubuntu.yml` with definitions for `packer_provision_commands`, `packer_provision_commands_clean`, `packer_provision_install_logs`, and `packer_provision_packages`

Signed-off-by: jam82 <jam@kabelmail.net>

--- a/vars/archlinux.yml
+++ b/vars/archlinux.yml
@@ -1,6 +1,6 @@
 ---
 # role: ansible-role-packer-provision
-# file: vars/Archlinux.yml
+# file: vars/archlinux.yml
 
 packer_provision_commands: []
 
