feat: refactor Molecule configurations and playbooks
- Remove `virtualbox/` from the `molecule/default` symbolic link
- Add new `molecule/default/molecule.yml` file with podman driver configuration
- Add verify playbook to `molecule/qemu/molecule.yml`
- Update `molecule/resources/playbooks/converge.yml` to gather facts and use environment variable for role
- Delete `molecule/resources/playbooks/prepare.yml`
- Delete `molecule/resources/playbooks/vars.yml`
- Add new `molecule/resources/playbooks/verify.yml` for verifying swap is disabled
- Remove `molecule/resources/tests/test_default.py`
- Change `molecule/virtualbox/molecule.yml` driver from virtualbox to libvirt and add verify playbook
- Add new `tasks/dnf.yml` for package management using dnf
- Update `tasks/swap.yml` to include service facts and improve condition for masking systemd swap units
- Modify `tasks/user.yml` to use a default value for `ansible_ssh_user` and make paths and parameters more flexible

Signed-off-by: Jonas Mauer <jonas.mauer@web.de>

--- a/molecule/resources/playbooks/converge.yml
+++ b/molecule/resources/playbooks/converge.yml
@@ -1,15 +1,9 @@
 ---
-# role: ansible-role-packer-provision
+# role: jomrr.packer_provision
 # file: molecule/resources/playbooks/converge.yml
 
-- name: Converge
+- name: "PLAYBOOK | Converge"
   hosts: all
-  become: true
-  pre_tasks:
-    - name: "Include variables to converge playbook"
-      ansible.builtin.include_vars: vars.yml
+  gather_facts: true
   roles:
-    # if you want to enable requirements put them in requirements.yml
-    # and add here
-    # - role: common
-    - role: ansible-role-packer-provision
+    - role: "{{ lookup('ansible.builtin.env', 'MOLECULE_PROJECT_DIRECTORY') }}"
