--- a/molecule/qemu/molecule.yml
+++ b/molecule/qemu/molecule.yml
@@ -33,8 +33,8 @@ provisioner:
   name: ansible
   log: true
   playbooks:
-    prepare: ../resources/playbooks/prepare.yml
     converge: ../resources/playbooks/converge.yml
+    verify: ../resources/playbooks/verify.yml
   inventory:
     group_vars:
       all:
